--- a/shippable.yml
+++ b/shippable.yml
@@ -16,13 +16,14 @@ env:
     - CODE_COVERAGE_DIR=$SHIPPABLE_REPO_DIR/shippable/codecoverage
     - TESTS_LOC_DIR=$SHIPPABLE_REPO_DIR/tests
     - MOD_LOC=$SHIPPABLE_REPO_DIR/node_modules/.bin/
+
+build:
+
+  pre_ci:
     - mkdir -p $SHIPPABLE_REPO_DIR/bin
     - PATH=$SHIPPABLE_REPO_DIR/bin:$PATH
     - curl https://storage.googleapis.com/git-repo-downloads/repo > $SHIPPABLE_REPO_DIR/bin/repo
     - chmod a+x $SHIPPABLE_REPO_DIR/bin/repo
-
-build:
-
   # http://docs.shippable.com/ci/shippableyml/#ci
   ci:
     #- git clone https://github.com/OP-TEE/optee_os.git && cat optee_os/Makefile
