--- a/shippable.yml
+++ b/shippable.yml
@@ -27,6 +27,8 @@ build:
   # http://docs.shippable.com/ci/shippableyml/#ci
   ci:
     #- git clone https://github.com/OP-TEE/optee_os.git && cat optee_os/Makefile
+    - ls -al $SHIPPABLE_REPO_DIR/bin/*
+    - echo $PATH
     - git clone https://github.com/linaro-swg/optee_android_manifest
     - cd optee_android_manifest
     - ./sync-p-hikey960.sh
