--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 # Language setting http://docs.shippable.com/ci/languages/node/
-language: c
-compiler:
-  - gcc
+language: python:
+python:
+  - "3.7"
 # use this to control what branches get built.
 # http://docs.shippable.com/ci/advancedOptions/branches/
 branches:
